Fix pledge modal z-index.

--- a/src/components/Pledge/pledge.scss
+++ b/src/components/Pledge/pledge.scss
@@ -6,6 +6,7 @@
 .pledge {
     background: $black-high-opacity;
     position: fixed;
+    z-index: 1;
     top: 80px;
     width: 220px;
     -webkit-transition: .2s ease-in-out;
